chapter 6 hateoas support working